--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,1 +1,44 @@
 /* Write your CSS code here */
+
+.home-con {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.home-body-con {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90vh;
+}
+.home-body-dtls-con {
+  width: 50%;
+}
+
+.home-body-dtls-heading {
+  font-family: 'Roboto';
+  font-size: 50px;
+  color: #1e293b;
+}
+
+.home-body-dtls-para {
+  font-family: 'Roboto';
+  font-size: 20px;
+  color: #64748b;
+}
+
+.home-body-dtls-btn {
+  width: 150px;
+  height: 40px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  color: #ffffff;
+  font-family: 'Roboto';
+  background-color: #0967d2;
+}
+
+.home-body-dtls-img {
+  width: 30%;
+}
