--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -18,7 +18,7 @@
   padding: 50px;
   border-radius: 10px;
   box-shadow: -5px 5px 10px 10px #d7dfe9;
-  height: 300px;
+  height: 350px;
 }
 
 .website-logo {
@@ -61,4 +61,10 @@
   font-size: 15px;
   margin-top: 20px;
   cursor: pointer;
+}
+
+.err-msg {
+  font-family: 'Roboto';
+  color: #ff0b37;
+  font-size: 12px;
 }
